[package]
name = "tango-controls-tui"
version = "0.0.3"
authors = ["Johan Venter <a.johan.venter@gmail.com>"]
edition = "2021"
repository = "https://github.com/SKAJohanVenter/tango-controls-tui"

[dependencies]
crossterm = "0.22.1"
ratatui = { version = "0.21.0", default-features = false, features = ['crossterm'] }
tango-controls-client-sys = { git = "https://gitlab.com/jventer/tango-controls-client-sys", rev="319e106c89eac8fa2f244b369d8bfec9449edb77" }
unicode-width = "0.1.9"
ratatui-tree-widget = { git = "https://github.com/SKAJohanVenter/ratatui-rs-tree-widget", rev="f163d70093109d729f274f8cb857a2fd4a647c63" }
log = "0.4.14"
log4rs = "1.0.0"
anyhow = "1.0.48"
clap = "2.33.3"

[features]
