[package]
name = "tango-controls-tui"
version = "0.0.3"
authors = ["Johan Venter <a.johan.venter@gmail.com>"]
edition = "2021"
repository = "https://github.com/SKAJohanVenter/tango-controls-tui"

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.26.0", default-features = false, features = ['crossterm'] }
tango-controls-client-sys = { git = "https://gitlab.com/jventer/tango-controls-client-sys", rev="b66a6582199baa4b7f07e8b003a5786c5942a5cf" }
unicode-width = "0.1.9"
tui-tree-widget = "0.17.0"
log = "0.4.14"
log4rs = "1.0.0"
anyhow = "1.0.48"
clap = "2.33.3"

[features]
